// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates inline sourcemap 1`] = `
Object {
  "mappings": ";;;;;;AAAA;AACA;AACA;AACA;AACA;AACA;;;AAGA;AACA;AACA;AACA;AACA;AACA;AACA;AAHA;AAKA;AAPA;AASA;AACA;AACA;AACA;AAFA;AAIA;AACA;AACA;AACA;AACA;AAHA;AAjBA",
  "names": Array [],
  "sources": Array [
    "Basic.vue",
  ],
  "sourcesContent": Array [
    "<template>
    <div class=\\"hello\\">
        <h1 :class=\\"headingClasses\\">{{ msg }}</h1>
    </div>
</template>

<script>
    export default {
        name: 'basic',
        computed: {
            headingClasses: function headingClasses() {
                return {
                    red: this.isCrazy,
                    blue: !this.isCrazy,
                    shadow: this.isCrazy,
                };
            },
        },
        data: function data() {
            return {
                msg: 'Welcome to Your Vue.js App',
                isCrazy: false,
            };
        },
        methods: {
            toggleClass: function toggleClass() {
                this.isCrazy = !this.isCrazy;
            },
        },
    };
</script>
",
  ],
  "version": 3,
}
`;

exports[`generates inline sourcemap for .vue files using src attributes 1`] = `
Object {
  "mappings": ";;;;;;;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AAHA;AAKA;AAPA;AASA;AACA;AACA;AACA;AAFA;AAIA;AACA;AACA;AACA;AACA;AAHA;AAjBA",
  "names": Array [],
  "sources": Array [
    "BasicSrc.vue",
  ],
  "sourcesContent": Array [
    "export default {
  name: 'basic',
  computed: {
    headingClasses: function headingClasses () {
      return {
        red: this.isCrazy,
        blue: !this.isCrazy,
        shadow: this.isCrazy
      }
    }
  },
  data: function data () {
    return {
      msg: 'Welcome to Your Vue.js App',
      isCrazy: false
    }
  },
  methods: {
    toggleClass: function toggleClass () {
      this.isCrazy = !this.isCrazy
    }
  }
}
",
  ],
  "version": 3,
}
`;
